[package]
name = "organisationsnummer"
description = "Validate Swedish organization numbers"
version = "1.0.0"
authors = ["Fredrik Forsmo <fredrik.forsmo@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://organisationsnummer.dev"
repository = "https://github.com/organisationsnummer/rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
personnummer = "3.1.1"
regex = "1"
