[package]
authors = ["Fredrik Forsmo <fredrik.forsmo@gmail.com>"]
description = "Validate Swedish organization numbers"
edition = "2021"
homepage = "https://organisationsnummer.dev"
license = "MIT"
name = "organisationsnummer"
readme = "README.md"
repository = "https://github.com/organisationsnummer/rust"
version = "1.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
personnummer = "3.1.1"
regex = "1"
reqwest = {version = "0.11.14", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
